<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEBEC"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/buttonDefault"
        android:layout_width="176dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/this_default_dialog_message"
        android:gravity="center"
        android:text="@string/default_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCustomDialog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCustomDialog"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/backGround"
        android:contentDescription="@string/this_costume_dialog_message"
        android:gravity="center"
        android:text="@string/custom_dialog"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonopenCamera"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#A85BD3"
        android:contentDescription="@string/this_button_opens_camera"
        android:drawableStart="@drawable/ic_baseline_camera_alt_24"
        android:gravity="center"
        android:text="@string/open_camera"
        app:layout_constraintEnd_toEndOf="@+id/buttonCustomDialog"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/buttonDefault"
        app:layout_constraintTop_toBottomOf="@+id/buttonCustomDialog"
        tools:ignore="RedundantDescriptionCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="406dp"
        android:layout_height="358dp"
        android:foregroundGravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ill"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewTestit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/this_is_text2"
        android:text="@string/test_it"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonopenCamera"
        app:layout_constraintStart_toStartOf="@+id/buttonopenCamera"
        app:layout_constraintTop_toBottomOf="@+id/buttonopenCamera" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/camPhoto"
        app:layout_constraintEnd_toEndOf="@+id/textViewTestit"
        app:layout_constraintStart_toStartOf="@+id/textViewTestit"
        app:layout_constraintTop_toBottomOf="@+id/textViewTestit"
        app:srcCompat="@drawable/ic_addimage" />
</androidx.constraintlayout.widget.ConstraintLayout>