<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backGround">
    
    <ImageView
        android:layout_width="match_parent"

        android:layout_height="70dp"
        android:src="@drawable/ic_baseline_cloud_done_24"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="34sp"
            android:layout_margin="11dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_costume_dialog_message_thank_you"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_margin="11dp"
            />

        <Button
            android:id="@+id/btnOkay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>